# feishu-obsidian-sync

./: .gitignore  README.md  config.example.yaml  pyproject.toml
claude/commands/: note.md
feishu_sync/: __init__.py  cli.py  client.py  config.py  docx_reader.py  docx_writer.py  media.py  state.py  sync.py  wiki.py
feishu_sync/converter/: __init__.py  blocks_to_md.py  richtext.py
scripts/: com.ray.feishu-sync.plist  notify.py  probe.py  push_note.py  timer.sh
