[project]
name = "feishu-sync"
version = "0.1.0"
description = "飞书知识库(Wiki) ⇄ Obsidian 双向同步 CLI"
requires-python = ">=3.10"
dependencies = [
    "lark-oapi>=1.6",
    "pyyaml>=6.0",
    "click>=8.1",
    "python-frontmatter>=1.1",
]

[project.scripts]
feishu-sync = "feishu_sync.cli:cli"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["feishu_sync", "feishu_sync.converter"]
